css/screen.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */

button,
input { /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */

button,
select { /* 1 */
  text-transform: none;
}

/**
 * Correct the inability to style clickable types in iOS and Safari.
 */

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

/**
 * Remove the inner border and padding in Firefox.
 */

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
 * Restore the focus styles unset by the previous rule.
 */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Correct the padding in Firefox.
 */

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/*Mobile First CSS*/

html{
  line-height: 1.2em;
  font-family: Arial Black;
  font-size: 16px;
  text-shadow: 1px 1px 1px #000;
  color: white;
  background-image: url("images/rl1.png");
  background-size: 100%;
  background-repeat: no-repeat;
}

h1{
  font-size: 1.728em;
  text-align: center;
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 30px;
}

label{
  display: block;
  text-align: center;
  font-size: 1.2em;
  margin-top: 5px;
}

input{
  width: 96%;
  padding: 10px 20px;
  margin: 8px 0;
  border: 1px solid #7bb9fc;
  border-radius: 8px;
  box-sizing: border-box;
}

#container{
  text-align: center;
  margin: auto;
  margin-top: 20%;
  margin-bottom: 50%;
	box-sizing: border-box;
	background-color: transparent;
}

@media screen and (min-width: 480px){
  html{
    background-position: center;
  }
  
  h1{
    font-size: 2.074em;
  }
  
  label{
    font-size: 1.44em;
  }

  input{
    width: 96%;
    padding: 12px 20px;
    margin: 8px 0;
    border: 1px solid #7bb9fc;
    border-radius: 8px;
    box-sizing: border-box;
  }
  
  #container{
    text-align: center;
    margin: auto;
    margin-top: 25%;
    margin-bottom: 50%;
		margin-left: 20%;
		margin-right: 20%;
		background-color: grey;
		opacity: 0.9;
		border-radius: 10px;
  }
   
  #submit {
    width: 35%;
    display: block;
    margin: auto;
    margin-top: 15px;
    font-size: 0.833em;
  }
}

@media screen and (min-width: 768px){
  h1{
    font-size: 2.488em;
  }
  
  label{
    font-size: 1.728em;
  }
  
  input{
    width: 96%;
  }
  
  #container{
		margin-top: 15%;
		margin-bottom: 50%;
		margin-left: 20%;
		margin-right: 20%;
  }
   
  #submit {
    font-size: 1em;
  }
}

@media screen and (min-width: 1024px){   
  input{
    width: 96%;
  }

  #container{
		margin-top: 10%;
		margin-bottom: 50%;
		margin-left: 30%;
		margin-right: 30%;
  }
}

